apps/hass/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hass-home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: hass
spec:
  serviceName: hass-home-assistant
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: hass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/instance: hass
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: hass-home-assistant
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            failureThreshold: 3
            periodSeconds: 20
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: init-volume
          configMap:
            name: init-script
        - name: config-volume
          configMap:
            name: hass-configuration
  volumeClaimTemplates:
    - metadata:
        name: hass-home-assistant
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
