apps/hass/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass-home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: hass
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: hass
